Few more code cleanups: 1. No need to define Enum for Constants. Enums are used when you have values that have something common like Role. For non-related constants, it is better to use class with public static final fields. 2. There was copy/pasted code that can be extracted and I moved it into AuthenticationFacade 3. There are few more code cleanups, but these are insignificant like:   newEvents.forEach(e -> existingEvents.add(e)); is actually   existingEvents.addAll(newEvents);
Don't mix JUnit 5 and 4. Tests used Assert from JUnit 4 instead of Assertions from JUnit 5. This could create a problem later when JUnit 4 is removed from the class path.